<resources xmlns:tools="http://schemas.android.com/tools"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="edittxt_website_pref">Enter The Sync URL</string>
    <string name="edittxt_website_pref_summary">This is the website that will receive the text
        messages.
    </string>
    <string name="edittxt_api_key_pref">Enter the Secret Key</string>
    <string name="edittxt_api_key_pref_summary">If a secret/key has been specified at the website,
        it will be required.
    </string>
    <string name="edittxt_keyword_pref">Enter Keyword - optional</string>
    <string name="editxt_keyword_pref_summary">Specify keywords to use to filter incoming
        messages.
    </string>
    <string name="edittxt_keyword_hint">fire, crime, help, report, or a RegEx.</string>
    <string name="edittxt_filter_by_from_pref">Enter Phone Number - optional</string>
    <string name="edittxt_filter_by_from_pref_summary">Specify phone number whitelist used to filter
        incoming messages.
    </string>
    <string name="edittxt_filter_by_from_hint">+233713849796,+254243581806</string>
    <string name="edittxt_unique_id_pref">Enter Unique ID</string>
    <string name="edittxt_unique_id_pref_summary">Specify a unique ID for this device. Used by the
        server to identify which device is sending it messages.
    </string>
    <string name="edittxt_unique_id_hint">01234</string>
    <string name="edittxt_unique_name_pref">Enter name to identify the device.</string>
    <string name="edittxt_unique_name_pref_summary">Specify a short name to identify this device.
        Used by the server to identify which device is sending it messages.
    </string>
    <string name="edittxt_unique_name_hint">Enter a short name.</string>
    <string name="edittxt_alert_phone_pref">Enter alert phone number</string>
    <string name="edittxt_alert_phone_pref_summary">Specify a phone number to send alerts to.
    </string>
    <string name="edittxt_reply">Enter A Response Message</string>
    <string name="edittxt_reply_title">Response Message</string>
    <string name="edittxt_reply_summary">The message to be sent to users.</string>
    <string name="edittxt_reply_default">Your message has been received. Thank you.</string>
    <string name="sms_sync_enabled">SMSsync is Enabled</string>
    <string name="sms_sync_disabled">SMSsync Disabled</string>
    <string name="general_settings">General</string>
    <string name="chk_enable_sms_sync">Start SMSsync service</string>
    <string name="chk_sms_sync_hint">Start and Stop SMS gateway.</string>
    <string name="reply_settings">Reply Message Settings</string>
    <string name="chk_enable_reply">Reply Messages</string>
    <string name="chk_reply_hint">Automatically respond to every message that comes to SMSsync.
    </string>
    <string name="chk_enable_auto_delete">Auto Delete Messages</string>
    <string name="chk_auto_delete_hint">Automatically delete messages from the Message app\'s inbox
        to save space on the phone.
    </string>
    <string name="chk_enable_auto_delete_pending_messages">Auto Delete Pending Messages</string>
    <string name="chk_enable_auto_delete_pending_messages_hint">Automatically delete pending
        messages that have failed to be sent.
    </string>
    <string name="select_number_of_retries">No. of retries for pending messages</string>
    <string name="select_number_of_retries_hint">Set the number of retries before the app
        automatically deletes pending messages.
    </string>
    <string name="select_sync_frequency">Select A Time Frequency</string>
    <string name="select_sync_frequency_hint">Pre configured time frequencies at which the task will
        be executed
    </string>
    <string name="one_try">One try</string>
    <string name="two_tries">Two tries</string>
    <string name="three_tries">Three tries</string>
    <string name="four_tries">Four tries</string>
    <string name="five_tries">Five tries</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="every_one_minute">Every 1 minute</string>
    <string name="every_five_minutes">Every 5 minutes</string>
    <string name="every_thirty_minutes">Every 30 minutes</string>
    <string name="every_hour">Every hour</string>
    <string name="every_twelve_hours">Every 12 hours</string>
    <string name="every_24_hours">Every 24 hours</string>
    <string name="chk_enable_sms_delivery_report">SMS Delivery Report</string>
    <string name="chk_sms_delivery_report_hint">Enable if you want SMS delivery status report to be
        sent to the app. Note: Some network providers charge you for this.
    </string>
    <string name="chk_enable_auto_sync">Enable Auto Sync</string>
    <string name="chk_enable_auto_sync_hint">Allow SMSsync to periodically sync pending messages.
    </string>
    <string name="txt_auto_sync_delay">Auto sync frequency</string>
    <string name="auto_sync_delay_hint">Set how often SMSsync syncronizes with the configured
        Sync URL.
    </string>
    <string name="sms_portals_settings">SMS Portals Settings</string>
    <string name="chk_enable_sms_portals">Enable SMS Portals</string>
    <string name="chk_enable_sms_portals_hint">Use SMS Portals when sending SMS messages,
        effectively increasing the default Android limit (100 SMS/hour).
    </string>
    <string name="chk_enable_task_check">Enable Task Checking</string>
    <string name="chk_enable_task_check_hint">Allow SMSsync to periodically check for tasks enabled
        on the Sync URL. SMSsync then executes the task. Eg. SMSsync sends SMS
    </string>
    <string name="txt_task_check_delay">Set A Specific Time Frequency</string>
    <string name="txt_task_check_delay_hint">A specific time at which the frequency will run
    </string>
    <string name="app_name">SMSsync</string>
    <string name="outbox">SMSsync Pending Messages</string>
    <string name="version_status">Beta</string>
    <string name="sms_status_success">SMS sent</string>
    <string name="sms_status_failed">SMS failed to be delivered</string>
    <string name="notification_summary">SMSsync Gateway is Running</string>
    <string name="sending_failed">SMSsync failed to send message to server.</string>
    <string name="sending_failed_http_code">Server returned HTTP status code is %1$d.</string>
    <string name="sending_failed_custom_error">Sending message to the server failed. Server error:
        %1$s
    </string>
    <string name="sending_succeeded">SMSsync Message Sent.</string>
    <string name="no_messages_to_sync">There are no messages to send.</string>
    <string name="no_messages_to_delete">There are no messages to delete.</string>
    <string name="sync_failed">SMSsync message sending failed. Please check your internet connection
        and sync URL configuration.
    </string>
    <string name="powered">Powered</string>
    <string name="powered_by">
        <xliff:g id="powered_info">%1$s</xliff:g>
        \n
        Created by Ushahidi
    </string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_sync_all">Synchronize All</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_sync">Synchronize</string>
    <string name="menu_import">Import SMS</string>
    <string name="menu_settings">Settings</string>
    <string name="messages_deleted">Messages successfully deleted.</string>
    <string name="messages_deleted_failed">Messages couldn\'t be deleted.</string>
    <string name="status">Status</string>
    <string name="empty_list">No pending messages.</string>
    <string name="http_text">http://</string>
    <string name="sms_failed">SMS failed</string>
    <string name="invalid_url">The Sync URL entered was invalid.</string>
    <string name="no_configured_url">The SMSsync service is not running.</string>
    <string name="no_connection">Could not make connection to the Sync URL.</string>
    <string name="no_task">No task is enabled on the configured Sync URL.</string>
    <string name="auto_sync_settings">Auto Sync Settings</string>
    <string name="task_check_settings">Task Settings</string>
    <string name="about_smssync">About Sync</string>
    <string name="please_wait">Please wait</string>
    <string name="smssync_not_enabled">SMSsync is not enabled. Please enable it in order to perfom
        this action.
    </string>
    <string name="import_messages">Importing messages...</string>
    <string name="nothing_to_import">No messages to import. Make sure you have SMS messages in your
        SMS inbox.
    </string>
    <string name="chk_enable_reply_frm_server">Get Reply from Server</string>
    <string name="chk_reply_frm_server_hint">Instantly send messages as recieved from the server as
        SMS without waiting on a scheduler.
    </string>
    <string name="filter_messages">Filter messages</string>
    <string name="validate_sms_delivery_report_status">Message Result API depends on SMS Delivery
        Report. Please enable it first.
    </string>
    <string name="validate_message_result_api">Message Result API depends on it. Please disable it
        first.
    </string>
    <string name="sms_delivery_status_failed">Failed to send SMS - Maybe insufficient air time on
        the phone.
    </string>
    <string name="sms_delivery_status_no_service">Failed to send SMS because service is currently
        unavailable
    </string>
    <string name="title_bar_text">Messages</string>
    <string name="enter_sync_title">Enter Title for the Sync URL</string>
    <string name="edittxt_keyword">Enter Keyword eg. Fire, Crime or a RegEx</string>
    <string name="task">Task</string>
    <string name="filters">Filters</string>
    <string name="sync_scheme_keys">Payload Keys</string>
    <string name="sync_scheme_method">HTTP Method</string>
    <string name="sync_scheme_data_format">Data Format</string>
    <string name="enter_key_for_secret">Enter key for \'secret\'</string>
    <string name="enter_key_for_from">Enter key for \'from\'</string>
    <string name="enter_key_for_message_id">Enter key for \'message_id\'</string>
    <string name="enter_key_for_message">Enter key for \'message\'</string>
    <string name="enter_key_for_sent_timestamp">Enter key for \'sent_timestamp\'</string>
    <string name="enter_key_for_sent_to">Enter key for \'sent_to\'</string>
    <string name="enter_key_for_device_id">Enter key for \'device_id\'</string>
    <string name="chk_enable_message_results_api">Enable Message Results API"</string>
    <string name="chk_enable_message_results_api_hint">Allow SMSsync to send information about sent
        messages to the server.
    </string>
    <string name="automation">Automation</string>
    <string name="reports">Reports</string>
    <string name="add_integration">Add Integration</string>
    <string name="integrations">Integrations</string>
    <string name="twitter">Twitter</string>
    <string name="translate_title">Translate SMSsync</string>
    <string name="translate_hint">Help us translate SMSsync into other languages</string>
    <string name="google_plus_community_title">Google+ community</string>
    <string name="google_plus_community_hint">Connect with us on our Google+ community page. Read
        about releases, share ideas or suggest improvements
    </string>
    <string name="privacy_title">Privacy Notice</string>
    <string name="privacy_hint">The following describes our policy for the information gathering,
        use and dissemination practices of Ushahidi for the services provided through its various
        websites and mobile apps.
    </string>
    <string name="forums_title">SMSsync forum</string>
    <string name="forums_hint">Report issues or help someone with issues</string>
    <string name="about">About</string>
</resources>