<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project Licensed under the 
	Apache License, Version 2.0 (the "License"); you may not use this file except 
	in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License.
-->

<!--
     This is a primitive example showing the different types of preferences 
	available.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings">
        <EditTextPreference
                android:dialogTitle="@string/edittxt_unique_id_pref"
                android:hint="@string/edittxt_unique_id_hint"
                android:key="unique_id_preference"
                android:summary="@string/edittxt_unique_id_pref_summary"
                android:title="@string/edittxt_unique_id_pref"/>

        <CheckBoxPreference
                android:key="auto_delete_preference"
                android:summary="@string/chk_auto_delete_hint"
                android:title="@string/chk_enable_auto_delete"/>

        <EditTextPreference
            android:dialogTitle="@string/edittxt_alert_phone_pref"
            android:key="alert_phone_number_preference"
            android:summary="@string/edittxt_alert_phone_pref_summary"
            android:title="@string/edittxt_alert_phone_pref"
            android:inputType="number"
            android:digits="0123456789"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/reply_settings">
        <CheckBoxPreference
                android:key="enable_reply_frm_server_preference"
                android:summary="@string/chk_reply_frm_server_hint"
                android:title="@string/chk_enable_reply_frm_server"/>
        <CheckBoxPreference
                android:key="enable_reply_preference"
                android:summary="@string/chk_reply_hint"
                android:title="@string/chk_enable_reply"/>

        <EditTextPreference
                android:defaultValue="@string/edittxt_reply_default"
                android:dialogTitle="@string/edittxt_reply"
                android:key="reply_preference"
                android:summary="@string/edittxt_reply_summary"
                android:title="@string/edittxt_reply_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/auto_sync_settings">
        <CheckBoxPreference
                android:key="auto_sync_preference"
                android:summary="@string/chk_enable_auto_sync_hint"
                android:title="@string/chk_enable_auto_sync"/>
        <org.addhen.smssync.util.TimePreference
                android:dialogTitle="@string/txt_auto_sync_delay"
                android:key="auto_sync_times"
                android:summary="@string/auto_sync_delay_hint"
                android:title="@string/txt_auto_sync_delay"
                android:dependency="auto_sync_preference"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/task_check_settings">
        <CheckBoxPreference
                android:key="task_check_preference"
                android:summary="@string/chk_enable_task_check_hint"
                android:title="@string/chk_enable_task_check"/>
        <org.addhen.smssync.util.TimePreference
                android:dialogTitle="@string/txt_task_check_delay"
                android:key="task_check_times"
                android:summary="@string/txt_task_check_delay_hint"
                android:title="@string/txt_task_check_delay"
                android:dependency="task_check_preference"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sms_portals_settings" >
        <CheckBoxPreference
                android:key="enable_sms_portals"
                android:summary="@string/chk_enable_sms_portals_hint"
                android:title="@string/chk_enable_sms_portals" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_smssync">
        <Preference android:key="powered_preference"/>
    </PreferenceCategory>

</PreferenceScreen>

