<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2010 - 2015 Ushahidi Inc
  ~ All rights reserved
  ~ Contact: team@ushahidi.com
  ~ Website: http://www.ushahidi.com
  ~ GNU Lesser General Public License Usage
  ~ This file may be used under the terms of the GNU Lesser
  ~ General Public License version 3 as published by the Free Software
  ~ Foundation and appearing in the file LICENSE.LGPL included in the
  ~ packaging of this file. Please review the following information to
  ~ ensure the GNU Lesser General Public License version 3 requirements
  ~ will be met: http://www.gnu.org/licenses/lgpl.html.
  ~
  ~ If you have questions regarding the use of this file, please contact
  ~ Ushahidi developers at team@ushahidi.com.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
            android:title="@string/about_smssync"
            android:key="about_preference"/>
    <Preference
            android:title="@string/privacy_title"
            android:summary="@string/privacy_hint"
            android:key="privacy_preference"/>
    <Preference
            android:title="@string/translate_title"
            android:summary="@string/translate_hint"
            android:key="translate_preference"/>
    <Preference
            android:title="@string/google_plus_community_title"
            android:summary="@string/google_plus_community_hint"
            android:key="google_plus_preference"/>
    <Preference
            android:title="@string/forums_title"
            android:summary="@string/forums_hint"
            android:key="forums_preference"/>
</PreferenceScreen>