<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2010 - 2015 Ushahidi Inc
  ~ All rights reserved
  ~ Contact: team@ushahidi.com
  ~ Website: http://www.ushahidi.com
  ~ GNU Lesser General Public License Usage
  ~ This file may be used under the terms of the GNU Lesser
  ~ General Public License version 3 as published by the Free Software
  ~ Foundation and appearing in the file LICENSE.LGPL included in the
  ~ packaging of this file. Please review the following information to
  ~ ensure the GNU Lesser General Public License version 3 requirements
  ~ will be met: http://www.gnu.org/licenses/lgpl.html.
  ~
  ~ If you have questions regarding the use of this file, please contact
  ~ Ushahidi developers at team@ushahidi.com.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.SwitchPreferenceCompat
            android:key="enable_reply_frm_server_preference"
            android:summary="@string/chk_reply_frm_server_hint"
            android:title="@string/chk_enable_reply_frm_server"/>
    <android.support.v7.preference.SwitchPreferenceCompat
            android:key="enable_reply_preference"
            android:summary="@string/chk_reply_hint"
            android:title="@string/chk_enable_reply"/>

    <EditTextPreference
            android:dependency="enable_reply_preference"
            android:defaultValue="@string/edittxt_reply_default"
            android:dialogTitle="@string/edittxt_reply"
            android:key="reply_preference"
            android:summary="@string/edittxt_reply_summary"
            android:title="@string/edittxt_reply_title"/>
</PreferenceScreen>

