<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2010 - 2015 Ushahidi Inc
  ~ All rights reserved
  ~ Contact: team@ushahidi.com
  ~ Website: http://www.ushahidi.com
  ~ GNU Lesser General Public License Usage
  ~ This file may be used under the terms of the GNU Lesser
  ~ General Public License version 3 as published by the Free Software
  ~ Foundation and appearing in the file LICENSE.LGPL included in the
  ~ packaging of this file. Please review the following information to
  ~ ensure the GNU Lesser General Public License version 3 requirements
  ~ will be met: http://www.gnu.org/licenses/lgpl.html.
  ~
  ~ If you have questions regarding the use of this file, please contact
  ~ Ushahidi developers at team@ushahidi.com.
  -->

<!--
     This is a primitive example showing the different types of preferences 
	available.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:dialogTitle="@string/edittxt_unique_id_pref"
            android:hint="@string/edittxt_unique_id_hint"
            android:key="unique_id_preference"
            android:summary="@string/edittxt_unique_id_pref_summary"
            android:title="@string/edittxt_unique_id_pref"/>
    <EditTextPreference
            android:dialogTitle="@string/edittxt_unique_name_pref"
            android:hint="@string/edittxt_unique_name_hint"
            android:key="unique_name_preference"
            android:summary="@string/edittxt_unique_name_pref_summary"
            android:title="@string/edittxt_unique_name_pref"/>
    <android.support.v7.preference.SwitchPreferenceCompat
            android:id="@+id/check_enable_sms_delivery_report"
            android:key="enable_sms_report_delivery_preference"
            android:summary="@string/chk_sms_delivery_report_hint"
            android:summaryOff="@string/chk_sms_delivery_report_hint"
            android:summaryOn="@string/chk_sms_delivery_report_hint"
            android:title="@string/chk_enable_sms_delivery_report"
            android:defaultValue="false"/>

    <EditTextPreference
            android:dialogTitle="@string/edittxt_alert_phone_pref"
            android:inputType="phone"
            android:key="alert_phone_number_preference"
            android:summary="@string/edittxt_alert_phone_pref_summary"
            android:title="@string/edittxt_alert_phone_pref"/>
</PreferenceScreen>

