<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2010 - 2015 Ushahidi Inc
  ~ All rights reserved
  ~ Contact: team@ushahidi.com
  ~ Website: http://www.ushahidi.com
  ~ GNU Lesser General Public License Usage
  ~ This file may be used under the terms of the GNU Lesser
  ~ General Public License version 3 as published by the Free Software
  ~ Foundation and appearing in the file LICENSE.LGPL included in the
  ~ packaging of this file. Please review the following information to
  ~ ensure the GNU Lesser General Public License version 3 requirements
  ~ will be met: http://www.gnu.org/licenses/lgpl.html.
  ~
  ~ If you have questions regarding the use of this file, please contact
  ~ Ushahidi developers at team@ushahidi.com.
  -->

<!--
     This is a primitive example showing the different types of preferences 
	available.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.SwitchPreferenceCompat
            android:key="auto_delete_preference"
            android:summary="@string/chk_auto_delete_hint"
            android:title="@string/chk_enable_auto_delete"/>

    <android.support.v7.preference.SwitchPreferenceCompat
            android:key="auto_delete_pending_messages_preference"
            android:summary="@string/chk_enable_auto_delete_pending_messages_hint"
            android:title="@string/chk_enable_auto_delete_pending_messages"/>
    <ListPreference
            android:dependency="auto_delete_pending_messages_preference"
            android:entries="@array/retry_entries"
            android:entryValues="@array/retry_entries"
            android:key="auto_delete_pending_messages_retries_preference"
            android:summary="@string/select_number_of_retries_hint"
            android:title="@string/select_number_of_retries"/>

    <android.support.v7.preference.SwitchPreferenceCompat
            android:key="auto_sync_preference"
            android:summary="@string/chk_enable_auto_sync_hint"
            android:title="@string/chk_enable_auto_sync"/>
    <org.addhen.smssync.presentation.view.ui.widget.TimePreference
            android:dependency="auto_sync_preference"
            android:dialogTitle="@string/txt_auto_sync_delay"
            android:key="auto_sync_times"
            android:summary="@string/auto_sync_delay_hint"
            android:title="@string/txt_auto_sync_delay"/>
</PreferenceScreen>

