<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2010 - 2015 Ushahidi Inc
  ~ All rights reserved
  ~ Contact: team@ushahidi.com
  ~ Website: http://www.ushahidi.com
  ~ GNU Lesser General Public License Usage
  ~ This file may be used under the terms of the GNU Lesser
  ~ General Public License version 3 as published by the Free Software
  ~ Foundation and appearing in the file LICENSE.LGPL included in the
  ~ packaging of this file. Please review the following information to
  ~ ensure the GNU Lesser General Public License version 3 requirements
  ~ will be met: http://www.gnu.org/licenses/lgpl.html.
  ~
  ~ If you have questions regarding the use of this file, please contact
  ~ Ushahidi developers at team@ushahidi.com.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_messages"
              android:icon="@drawable/ic_message_black_24dp"
              android:title="@string/title_bar_text"/>
        <item android:id="@+id/nav_filters"
              android:icon="@drawable/ic_filter_list_black_24dp"
              android:title="@string/filters"/>

        <item android:id="@+id/nav_automation"
              android:icon="@drawable/ic_history_black_24dp"
              android:title="@string/automation"/>

        <item android:id="@+id/nav_reports"
              android:icon="@drawable/ic_assessment_black_24dp"
              android:title="@string/reports"/>
    </group>
    <group>
        <item android:title="@string/integrations">
            <menu>
                <item
                        android:icon="@drawable/ic_add_black_24dp"
                        android:id="@+id/nav_integration"
                        android:title="@string/add_integration"/>
                <item
                        android:title="@string/twitter"/>
            </menu>
        </item>
    </group>
    <group>
        <item android:title="Ushahidi Phone 1234">
            <menu>
                <item
                        android:title="Edit Device Info"/>
            </menu>
        </item>
    </group>
</menu>