<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2010 - 2015 Ushahidi Inc
  ~ All rights reserved
  ~ Contact: team@ushahidi.com
  ~ Website: http://www.ushahidi.com
  ~ GNU Lesser General Public License Usage
  ~ This file may be used under the terms of the GNU Lesser
  ~ General Public License version 3 as published by the Free Software
  ~ Foundation and appearing in the file LICENSE.LGPL included in the
  ~ packaging of this file. Please review the following information to
  ~ ensure the GNU Lesser General Public License version 3 requirements
  ~ will be met: http://www.gnu.org/licenses/lgpl.html.
  ~
  ~ If you have questions regarding the use of this file, please contact
  ~ Ushahidi developers at team@ushahidi.com.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.SwitchPreferenceCompat
            android:key="task_check_preference"
            android:summary="@string/chk_enable_task_check_hint"
            android:title="@string/chk_enable_task_check"/>
    <org.addhen.smssync.presentation.view.ui.widget.TimePreference
            android:dependency="task_check_preference"
            android:dialogTitle="@string/txt_task_check_delay"
            android:key="task_check_times"
            android:summary="@string/txt_task_check_delay_hint"
            android:title="@string/txt_task_check_delay"/>
    <android.support.v7.preference.SwitchPreferenceCompat
            android:dependency="task_check_preference"
            android:key="message_results_api_preference"
            android:summary="@string/chk_enable_message_results_api_hint"
            android:title="@string/chk_enable_message_results_api"/>
</PreferenceScreen>