<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2010 - 2015 Ushahidi Inc
  ~ All rights reserved
  ~ Contact: team@ushahidi.com
  ~ Website: http://www.ushahidi.com
  ~ GNU Lesser General Public License Usage
  ~ This file may be used under the terms of the GNU Lesser
  ~ General Public License version 3 as published by the Free Software
  ~ Foundation and appearing in the file LICENSE.LGPL included in the
  ~ packaging of this file. Please review the following information to
  ~ ensure the GNU Lesser General Public License version 3 requirements
  ~ will be met: http://www.gnu.org/licenses/lgpl.html.
  ~
  ~ If you have questions regarding the use of this file, please contact
  ~ Ushahidi developers at team@ushahidi.com.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
            android:title="@string/general_settings"
            android:key="general_settings_fragment"
            app:fragment="org.addhen.smssync.presentation.view.ui.fragment$GeneralSettingsFragment">
    </PreferenceScreen>
    <PreferenceScreen
            android:title="@string/title_bar_text"
            android:key="messages_settings_fragment"
            app:fragment="org.addhen.smssync.presentation.view.ui.fragment$MessagesSettingsFragment">
    </PreferenceScreen>
    <PreferenceScreen
            android:title="@string/automation"
            android:key="automation_settings_fragment"
            app:fragment="org.addhen.smssync.presentation.view.ui.fragment$AutomationSettingsFragment">
    </PreferenceScreen>
    <PreferenceScreen
            android:title="@string/task"
            android:key="task_settings_fragment"
            app:fragment="org.addhen.smssync.presentation.view.ui.fragment$TaskSettingsFragment">
    </PreferenceScreen>
    <PreferenceScreen
            android:title="@string/about"
            android:key="about_settings_fragment"
            app:fragment="org.addhen.smssync.presentation.view.ui.fragment$AboutSettingsFragment">
    </PreferenceScreen>
</PreferenceScreen>